# pcap_parser

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  setup.py
data/: example.pcap  generate_example_pcap.py
pcap_parser/: __init__.py  _pcap_parser.pyi  parser.py
src/: _pcap_parser.c  packet_parser_core.c  packet_parser_core.h
tests/: test_c_parser.py  test_parser.py
tests/c/: test_packet_parser.c
