[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcap-parser"
version = "0.1.0"
description = "Parse pcap files and extract packet information into a pandas DataFrame"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pandas>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "setup.py" },
    { file = "setup.cfg" },
    { file = "src/**/*.c" },
    { file = "src/**/*.h" },
]

[tool.pyright]
include = ["pcap_parser", "tests"]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
